--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 		<title>Projeto Mutum</title>
 		<link rel="stylesheet" href="./style/style.css">
 	</head>
-	<header>
+	<body>
 		<nav class="navbar">
 			<div class="name">Projeto Mutum</div>
 		</nav>
 		<nav class="links">
 			<a href="#">golang</a>
+			<a href="#">golang</a>
+			<a href="#">golang</a>
 		</nav>
-	</header>
-	<body>
+
 	
 		<h2 class="title">Qual a ideia do projeto</h2>
 		<p class="text">
