Adicionando sidebar, trocando posição de menubar com titulo

--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
 		<link rel="stylesheet" href="./style/style.css">
 	</head>
 	<body>
+		<nav class="links">
+			<a href="#">golang</a>|
+			<a href="#">software</a>|
+			<a href="#">artigos</a>|
+		</nav>
+
 		<nav class="navbar">
 			<div class="name">Projeto Mutum</div>
 		</nav>
-		<nav class="links">
-			<a href="#">golang</a>
-			<a href="#">golang</a>
-			<a href="#">golang</a>
+		<hr>
+		<nav class="sidebar">
+			<div>
+				<ul>
+					<li>
+						<a href="#">artigos/</a>
+					</li>
+					<li>
+						<a href="#">projetos/</a>
+					</li>
+					<li>
+						<a href="#">sobre/</a>
+					</li>
+				</ul>
+			</div>
 		</nav>
-
-	
+		<div class="vl"></div>
 		<h2 class="title">Qual a ideia do projeto</h2>
 		<p class="text">
 			Somos um projeto brasileiro que busca mostrar a importância do software livre na era técnológica atual, onde é muito difiícil saber como as ferramentas funcionam 
