--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<nav class="links">
 			<a href="#">golang</a>|
 			<a href="#">software</a>|
-			<a href="#">artigos</a>|
+			<a href="./artigos/main.html">artigos</a>|
 		</nav>
 
 		<nav class="navbar">
@@ -21,7 +21,7 @@
 			<div>
 				<ul>
 					<li>
-						<a href="#">artigos/</a>
+						<a href="./artigos/main.html">artigos/</a>
 					</li>
 					<li>
 						<a href="#">projetos/</a>
