Adicionando os artigos

--- a/artigos/main.html
+++ b/artigos/main.html
@@ -38,10 +38,10 @@
 			ou conhecimento. Se acha que esquecemos algo importante, sinta-se a vontade para criar um pull request no github.</p>
 			<ul class=list>
 				<li>
-					<a href=#>Teste</a>
+					<a href="./dificil.html">Sofwares para utilizar</a>
 				</li>
 				<li>
-					<a href=#>Teste</a>
+					<a href=#>Por que Linux é difícil?</a>
 				</li>
 			</ul>
 	</body>
