--- a/artigos/dificil.html
+++ b/artigos/dificil.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<nav class="links">
-			<a href="#">golang</a>|
+			<a href="https://go.dev/">golang</a>|
 			<a href="#">software</a>|
 			<a href="#">artigos</a>|
 		</nav>
