--- a/index.html
+++ b/index.html
@@ -1,75 +1,35 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Projeto Mutum</title>
-		<link rel="stylesheet" href="./style/style.css">
-	</head>
-	<body>
-		<nav class="links">
-			<a href="#">golang</a>|
-			<a href="#">software</a>|
-			<a href="./artigos/main.html">artigos</a>|
-		</nav>
-
-		<nav class="navbar">
-			<div class="name">Projeto Mutum</div>
-		</nav>
-		<hr>
-		<nav class="sidebar">
-			<div>
-				<ul>
-					<li>
-						<a href="./artigos/main.html">artigos/</a>
-					</li>
-					<li>
-						<a href="#">projetos/</a>
-					</li>
-					<li>
-						<a href="#">sobre/</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		
-		<h2 class="title">Essência do Software Livre</h2>
-			<p class="text">
-			Devemos entender o conceito <b>"Software Livre"</b>, como programas que respeitam a liberdade do usuário. 
-			De maneira simples, o usuário possue a liberdade de executar, copiar, distribuir, estudar, mudar e melhorar o software.
-			Tendo início nos laboratórios do MIT, Richard Stallman criou a ideia do software livre após a empresa do seu setor quebrar, sendo assim necessária adquirir uma nova.
-			A ideia se baseia em quatro pilares, sendo eles:</p>
-			<ul class=list>
-				<li>
-					<b>Liberdade [0]</b> - Poder executar o programa como bem entender
-				</li>
-				<li>
-					<b>Liberdade [1]</b> - Estudar ou adaptar um programa de acordo com suas necessidades(O acesso do código fonte é necessário).
-				</li>
-				<li>
-					<b>Liberdade [2]</b> - Redistribuir cópias do seu programa para ajudar a comunidade.
-				</li>
-				<li>
-					<b>Liberdade [3]</b> - Distribuir cópias modificadas de programas.
-				</li>
-			</ul>
-	
-		
-		<h2 class="title">Qual a ideia do projeto</h2>
-		<p class="text">
-			Somos um projeto brasileiro que busca mostrar a importância do software livre na era técnológica atual, onde é muito difiícil saber como as ferramentas funcionam 
-			e o que elas estão fazendo em nossa máquina.
-			<br>É possível fazer com que várias pessoas usem um mesmo programa ao criarmos uma base que se adapta de acordo com a necessidade do usuário. 
-			Um exemplo prático disso é o Kernel Linux, em todas distruibuições o código escrito é o mesmo, o que difere um sistema do outro são as modificações realizadas.
-		</p>
-		
-		<h2 class="title">Projetos hospedados por nós</h2>
-		<p class="text">
-			AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-		</p>
-	</body>
+    <head>
+        <title>Projeto Mutum</title>
+        <link rel="stylesheet" href="./style/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="title"><b>Projeto Mutum</b></div>
+        </nav>
+        <div class="text">
+            <h1>Sobre o projeto</h1>
+            <p>
+            Somos um projeto brasileiro que busca mostrar a importância do software livre
+            na era técnológica atual, onde é muito difiícil saber como as ferramentas funcionam e o que elas estão fazendo em nossa máquina.
+            </p>
+            <h1>O que é o software livre?</h1>
+            <p> 
+            Devemos entender o conceito "Software Livre", 
+            como programas que respeitam a liberdade do usuário. 
+            De maneira simples, o usuário possue a liberdade de executar, copiar, 
+            distribuir, estudar, mudar e melhorar o software. Tendo início nos laboratórios do MIT, 
+            Richard Stallman criou a ideia do software livre após a impressora do seu setor quebrar, sendo assim necessária adquirir uma nova. 
+            A ideia se baseia em quatro pilares, sendo eles:<br>
+            <b>Liberdade [0]</b> - Poder executar o programa como bem entender<br>
+            <b>Liberdade [1]</b> - Estudar ou adaptar um programa de acordo com suas necessidades(O acesso do código fonte é necessário).<br>
+            <b>Liberdade [2]</b> - Redistribuir cópias do seu programa para ajudar a comunidade.<br>
+            <b>Liberdade [3]</b> - Distribuir cópias modificadas de programas.<br>
+            </p>
+            <h1>Notícias</h1>
+            <p>Para ver mais sobre o que escrevemos em relação a programação, software livre e tecnologia <a href=#>clique aqui</a></p>
+        </div>
+    </body>
 </html>
-
-
-
-    
