--- a/artigos/main.html
+++ b/artigos/main.html
@@ -1,52 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Projeto Mutum</title>
-		<link rel="stylesheet" href="../style/style.css">
-	</head>
-	<body>
-		<nav class="links">
-			<a href="https://go.dev/">golang</a>|
-			<a href="#">software</a>|
-			<a href="#">artigos</a>|
-		</nav>
-
-		<nav class="navbar">
-			<div class="name">Projeto Mutum</div>
-		</nav>
-		<hr>
-		<nav class="sidebar">
-			<div>
-				<ul>
-					<li>
-						<a href="#">artigos/</a>
-					</li>
-					<li>
-						<a href="#">projetos/</a>
-					</li>
-					<li>
-						<a href="#">sobre/</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		
-		<h2 class="title">Nossos artigos</h2>
-			<p class="text">Aqui você irá encontrar nossos humildes artigos, que não tem intenção de ofender a ninguém e serve apenas como forma  de entretenimento
-			ou conhecimento. Se acha que esquecemos algo importante, sinta-se a vontade para criar um pull request no github.</p>
-			<ul class=list>
-				<li>
-					<a href="./dificil.html">Sofwares para utilizar</a>
-				</li>
-				<li>
-					<a href=#>Por que Linux é difícil?</a>
-				</li>
-			</ul>
-	</body>
+    <head>
+        <title>Projeto Mutum</title>
+        <link rel="stylesheet" href="../style/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="title">
+                <a href="../index.html"><b>Projeto Mutum</b></a>
+            </div>
+        </nav>
+        <div class="text">
+            <h1>Notícias</h1>
+            <p>
+                Aqui você irá encontrar nossas contribuições, onde abordamos diversos temas relacionados ao projeto, acreditamos que eles são muito importantes para a comunidade e para o aprendizado.
+                <ul>
+                    <a href="./programas.html"><li>Programas para você utilizar</li></a>
+                    <li>teste</li>
+                    <li>teste</li>
+                </ul>
+            </p>
+        </div>
+    </body>
 </html>
-
-
-
-    
