--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <nav class="navbar">
-            <div class="title"><b>Projeto Mutum</b></div>
+            <div class="title">
+                <a href"#"><b>Projeto Mutum</b></a>
+            </div>
         </nav>
         <div class="text">
             <h1>Sobre o projeto</h1>
@@ -29,7 +31,7 @@
             <b>Liberdade [3]</b> - Distribuir cópias modificadas de programas.<br>
             </p>
             <h1>Notícias</h1>
-            <p>Para ver mais sobre o que escrevemos em relação a programação, software livre e tecnologia <a href=#>clique aqui</a></p>
+            <p>Para ver mais sobre o que escrevemos em relação a programação, software livre e tecnologia <a href="./artigos/main.html">clique aqui</a></p>
         </div>
     </body>
 </html>
