--- a/artigos/main.html
+++ b/artigos/main.html
@@ -17,7 +17,7 @@
                 Aqui você irá encontrar nossas contribuições, onde abordamos diversos temas relacionados ao projeto, acreditamos que eles são muito importantes para a comunidade e para o aprendizado.
                 <ul>
                     <a href="./programas.html"><li>Programas para você utilizar</li></a>
-                    <li>teste</li>
+                    <a href="./dificuldade.html"><li>Por que acham Linux é difícil</li></a>
                     <li>teste</li>
                 </ul>
             </p>
