Atualizando artigos e navbar

--- a/artigos/dificuldade.html
+++ b/artigos/dificuldade.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projeto Mutum</title>
+        <title>Por que acham Linux difícil?</title>
         <link rel="stylesheet" href="../style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav class="navbar">
             <div class="title">
-                <a href="../index.html"><b>Projeto Mutum</b></a>
+                <a href"#"><b>Projeto Mutum</b></a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./artigos/main.html">Artigos</a></li>
+                </ul>
             </div>
         </nav>
         <div class="text">
-            <h1>Por que acham Linux difícil</h1>
+            <h1>Por que acham Linux difícil?</h1>
             <p>
                 É engraçado pensar que mesmo com tamanha tecnolgia que temos atualmente, a dificuldade em utilizar algo novo ainda está presente, e nesse texto iremos
                 falar sobre alguns pontos que são utilizados para falar que utilizar algo como Linux é difícil.
