--- a/artigos/golang.html
+++ b/artigos/golang.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projeto Mutum</title>
+        <title>Go, a linguagem do futuro?</title>
         <link rel="stylesheet" href="../style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav class="navbar">
             <div class="title">
-                <a href="../index.html"><b>Projeto Mutum</b></a>
+                <a href"#"><b>Projeto Mutum</b></a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./artigos/main.html">Artigos</a></li>
+                </ul>
             </div>
         </nav>
         <div class="text">
-            <h1>Go a linguagem do futuro?</h1>
+            <h1>Go, a linguagem do futuro?</h1>
             <p>
-                É engraçado pensar que mesmo com tamanha tecnolgia que temos atualmente, a dificuldade em utilizar algo novo ainda está presente, e nesse texto iremos
-                falar sobre alguns pontos que são utilizados para falar que utilizar algo como Linux é difícil.
-            </p>
-            <h2>Questões comerciais e costume</h2>
-            <p>
-                Desde o seu começPor que acham Linux difícilo, o Windows é vendido amplamente, e é usado em diversas empresas como uma ferramenta de trabalho. E por mais que existam muitas falhas no sistema operacional, utilizar Windows se tornou costume,
-                portanto é OK pensar que ao entrar em contato com algo como Ubuntu dúvidas apareçam, mas é importante dizer que existem diversos fóruns na internet que podem responder qualquer questionamento.
-            </p> 
-            <h2>Terminal e comandos</h2>
-            <p>
-                O terminal pode ser algo assustador de começo, mas a verdade é que conforme você utiliza seu sistema, 
-                percebe que o terminal e seu melhor amigo, e sim por mais que seja chato, você precisa memorizar grande parte dos comandos.
-            </p>
-            <h2>Uso de aplicativos</h2>
-            <p>
-                Algo que surpreende muitas pessoas quando elas começam a utilizar o Linux, 
-                é que aplicativos como o pacote Office e Adobe não funcionam, isso pode ser algo ruim na maioria das vezes, mas não existem motivos para se preocupar,
-                existem diversas alternativas que realizam praticamente o mesmo trabalho.
-            </p>
-            <h2>Segurança</h2>
-            <p>
-                Por conta de Linux ser um sistema menos famoso, a questão de ameaças não é tão abordada e existem poucas ferramentas relacionadas ao assunto. E é compreensível que
-                certas pessoas tenham dificuldade em distinguir o que é seguro do que não é.
+                A linguagem de programação Go, também pode ser lembrada como “Golang do google”, 
+                está em crescimento nos últimos anos, com novos modelos se adequando com a programação moderna, 
+                especialmente na nuvem, e o crescimento do Go aconteceu por ser considerada uma linguagem leve e com o código aberto. 
+                Outro campo onde a linguagem se destaca é o da ciência de dados, com a capacidade de passar do “laptop do analista para a produção total”.
+                <br>
+                É uma linguagem de engenharia, e que beneficia os desenvolvedores de diversas maneiras,
+                por exemplo, o garbage collection, que é a concorrência ativa que reduz a necessidade de código para se lidar com vazamentos de memória. 
+                A linguagem Go também possui diversos outros recursos que se encaixam nas arquiteturas de micro serviços e na ciência de dados.
+                <br>
+                Levando isso em consideração, o go está sendo adotado por diversas empresas, atualmente, 
+                uma API para o tensorflow foi colocada, e produtos como o pachyderm, estão sendo criados na Linguagem go. 
+                <br>
+                The Stack Overflow Survey (2017), mostra alguns sinais da popularidade do Go, 
+                a pesquisa deles mostra que, ela possui dados coletados de 64.000 desenvolvedores, 
+                e procura descobrir suas preferencias, para que se torne cada vez mais querido.
+                <br>
+                Algumas linguagens de programação, cresceram colaborativamente durante um período, 
+                ou, foram projetadas em uma diferente era, de computação com diferentes necessidades, 
+                o Go é uma linguagem explicitamente projetada, que foi direcionada a resolver problemas 
+                com linguagens e ferramentas, enquanto aproveita nativamente arquiteturas de hardware modernas.
+                <br>
+                O Go, é uma linguagem fácil, e
+                no mundo da TI, o software complexo, em uma grande escala, 
+                e é escrita por equipes de desenvolvedores, e geralmente possuem diferentes níveis de habilidades, desde menos experientes até mais experientes.
+                <br>
+                Além disso, possui um idioma, que incentiva a legibilidade e compreensão extremamente útil, 
+                A mistura de tipagem duck (via interfaces) e features de conveniência, como “:=” para declarações de variáveis curtas, 
+                dão a sensação de uma linguagem dinamicamente tipada, mantendo também os benefícios de uma tipagem forte.
+                <br>
+                O garbage, collection nativo do Go, que retira a necessidade de programadores produzirem seu próprio gerenciamento de memória, ajudando a evitar problemas como:
+                <br> 
+                <b>1 - Esperar o gerenciamento de memória serem feitos.</b>
+                <br>
+                <b>2 - O gerenciamento de memória requer diferentes rotinas para diferentes cores de processamento, 
+                   o manual de contabilizar cada configuração pode aumentar significamente o risco de vazamentos de memória.</b>
+                <br>
+                A concorrência do Go é importante para aplicações de rede que vivem e morrem em concorrência. 
+                Das APIs aos servidores web e frameworks de aplicativos web, os projetos envolvendo Go tendem a se concentrar em redes, 
+                funções distribuídas e/ou serviços para os quais os “goroutines” e canais do Go sejam apropriados.
             </p>
         </div>
     </body>
