--- a/artigos/main.html
+++ b/artigos/main.html
@@ -8,7 +8,13 @@
     <body>
         <nav class="navbar">
             <div class="title">
-                <a href="../index.html"><b>Projeto Mutum</b></a>
+                <a href"#"><b>Projeto Mutum</b></a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./artigos/main.html">Artigos</a></li>
+                </ul>
             </div>
         </nav>
         <div class="text">
@@ -16,9 +22,10 @@
             <p>
                 Aqui você irá encontrar nossas contribuições, onde abordamos diversos temas relacionados ao projeto, acreditamos que eles são muito importantes para a comunidade e para o aprendizado.
                 <ul>
-                    <a href="./programas.html"><li>Programas para você utilizar</li></a>
                     <a href="./dificuldade.html"><li>Por que acham Linux é difícil</li></a>
-                    <li>teste</li>
+                    <a href="./programas.html"><li>Programas para você utilizar</li></a>
+                    <a href="./licencas.html"><li>Licenças de software livre</li></a>
+                    <a href="./golang.html"><li>Go, a linguagem do futuro?</li></a>
                 </ul>
             </p>
         </div>
