--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             <div class="title">
                 <a href"#"><b>Projeto Mutum</b></a>
             </div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./artigos/main.html">Artigos</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="text">
             <h1>Sobre o projeto</h1>
