--- a/artigos/programas.html
+++ b/artigos/programas.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projeto Mutum</title>
+        <title>Programas para você utilizar</title>
         <link rel="stylesheet" href="../style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav class="navbar">
             <div class="title">
-                <a href="../index.html"><b>Projeto Mutum</b></a>
+                <a href"#"><b>Projeto Mutum</b></a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./artigos/main.html">Artigos</a></li>
+                </ul>
             </div>
         </nav>
         <div class="text">
-            <h1>Programas para seu sistema operacional</h1>
+            <h1>Programas para você utilizar</h1>
             <p>
                 Neste artigo, iremos listar alguns programas que possuem ótimas funcionalidades e que também servem como alternativas para programas pagos como o pacote Office          
             </p>
